--- a/chat_webclient/public/index.html
+++ b/chat_webclient/public/index.html
@@ -27,6 +27,11 @@
     <title>React App</title>
   </head>
   <body>
+    <style>
+      html, body, #root {
+        height: 100%;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
